@@ -97,6 +97,11 @@ parameter selection strategies.
 
 New demo demo_stoprules to illustrate use of different stopping rules.
 
+New function show_tomo to illustrate tomography test problem by displaying 
+rows of matrix as images. Also new demo demo_show_tomo to illustrate all 
+tomography test problems using both the isDisp input of tomography test 
+problem functions and the new show_tomo function.
+
 New options waitbar and verbose to allow displaying/printing progress.
 
 Made computation of upper bound for relaxation parameter in SIRT methods 
